force-app/main/default/objects/Apttus_Config2__TempFilter__c/Apttus_Config2__TempFilter__c.object-meta.xml
<CustomObject>
    <description>Helps in binding of search filter values.</description>
    <label>Temp Filter</label>
    <nameField>
        <label>Temp Filter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Temp Filters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>