force-app/main/default/objects/Apttus_Config2__TempFilter__c/fields/Apttus_Config2__FieldLabel__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FieldLabel__c</fullName>
    <description>The label of the Product2 field used in the filter.</description>
    <label>Field Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>