force-app/main/default/objects/Apttus_Config2__TempFilter__c/fields/Apttus_Config2__FieldValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FieldValue__c</fullName>
    <description>The value of the product field to be used for filtering the search result</description>
    <label>Field Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>