force-app/main/default/objects/Apttus_Config2__TempFilter__c/fields/Apttus_Config2__IsSelected__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IsSelected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the field value is selected.</description>
    <inlineHelpText>Select this to filter the search result.</inlineHelpText>
    <label>Is Selected</label>
    <type>Checkbox</type>
</CustomField>